# materialize-monitoring

./: .ecrc  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .yamllint-kyaml.kyaml  .yamllint.yaml  404.html  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  book.min.f1949da5d5fbd1f8eb209c9d7ea5bddf8ea4dbec3cc040f43efed51cb4e69dbf.css  en.search-data.min.029c8a2740801610fee4d58f6b160877dbcd24c86bd327bd7006a4d7d3fe27ab.json  en.search-data.min.03abb778417a4cf6ff39d597f97633a205560764c8d0aa42780bca392bedb765.json  en.search-data.min.078121a91988873c4802a6cdcc3135e844fa4c5119829ba314380708cf035f04.json  en.search-data.min.0d91df85915a18007b3d5e628041e1332b888f8103eb58cbfc21d13c7af8c81e.json  en.search-data.min.14233f700f9a6808e2a1d44b271a02f37b9b603c7efac146b3c917b8ea69506c.json  en.search-data.min.1caaca0eb57b1062ba56ced98c083cb25fe793d9c6d017885ad0404887fa77d6.json  en.search-data.min.1f0c2e80a00611163353e500bf308a1d130c8b7efde0b66aef6dba3cd7488f2a.json  en.search-data.min.2bdbc73d945314a23dccfc99cecbe0e2bda42bd6a9b10acb7b4de5f88254de34.json  en.search-data.min.34fbc867baa43e57dec6ff35adcf83563af4dedf926b8e10f3a38ec72f274352.json  en.search-data.min.3658a9944d3c66b3e41d5ff6c200d92131a8c9de0fd75219792d939ef6b9f06e.json  en.search-data.min.4017f6c0ed246d913d5818d30d2f7aa5808b8312f27d4744e4c596fd80c2af8f.json  en.search-data.min.42eb871df0478adb7e55b6f74b39c69820d1fe3a4d645f9b48f4ec2a5d4f3ebd.json  en.search-data.min.45e5dc5cee0839286e62fcfb48ce4f1a95d6ab5c211366d532ec92ecd88c04cf.json  en.search-data.min.4949485f521101408a87ca9bcfb390e2ff960af4a6275146e2a31930deb65982.json  en.search-data.min.4985452b7e28a447cea6771517fdf5d95acb662aad5e25e56ab7f31fe7ab11b8.json  en.search-data.min.532edd8c0346da1f7045464517151d131f157e016c5d26be1a54b88b45c012ad.json  en.search-data.min.53e5c386bd0763df0c80c874f49f300437ce8653c01f729cb3050740ae27574e.json  en.search-data.min.59078b5b54c9a8be45398803b96510957f62e5510cc4a9b9fe972d29be1054ba.json  en.search-data.min.59ac64e56f14b79ec647d1a952633d086c8a7eed575f6b4f573d6e2d7efea381.json  en.search-data.min.5c7a76a39045de2e066f32d0f3bd60e39de4c742e3844d087cd740ed1f1977f2.json  en.search-data.min.5c8a70de46782470212b50d7dd0b936db9d903efd3ae8fe3f11114051bfc8704.json  en.search-data.min.5cde162b27ae7881d973878b77bbe95342a50d56fca1c32857ad543975697a22.json  en.search-data.min.678619eefcf32b51db9f94781083d57b095855392c08acba7124b3b388d41f74.json  en.search-data.min.6c45b52ffa8e50208a686649ce02e54780e7cfe4ccc6b3c1eb2939e645d8d3a3.json  en.search-data.min.6ced34a54026b76fabfa62f2e109df81996174b0a6a9af131bdc33c8b90d6c54.json  (+105 more)
.github/: CODEOWNERS
.github/workflows/: auto-format.yaml  claude.yaml  dashboards.yaml  docs.yaml  lint.yaml  propose-bumps.yaml  publish-images-pr.yaml  publish-release.yaml  test.yaml
alerting/: index.html  index.xml
alerting/channels/: index.html
alerting/configuring/: index.html
alerting/maintenance/: index.html
architecture/: index.html
categories/: index.html  index.xml
charts/materialize-monitoring/: .helmignore  Chart.yaml  README.md  README.md.gotmpl  values.schema.json  values.yaml
charts/materialize-monitoring-crds/: Chart.yaml  README.md  values.yaml
crates/mz-monitoring-build/: Cargo.toml
crates/mz-monitoring-check/: Cargo.toml
crates/mz-monitoring-pipelines/: Cargo.toml
dashboards/: index.html  index.xml
dashboards/datadog/: index.html
dashboards/grafana/: env-top.json  gcp-env-top.json  index.html  index.xml
docs/: go.mod  go.sum  hugo.toml
docs/assets/: _custom.scss
docs/content/: _index.md  architecture.md  o11y-glossary.md
docs/layouts/: baseof.html
getting-started/: index.html  index.xml
getting-started/dependencies/: index.html
getting-started/gitops/: index.html
getting-started/helm/: index.html
getting-started/terraform/: index.html
legacy/: docker-compose.yml
logs-and-events/: index.html  index.xml
logs-and-events/collecting/: index.html
logs-and-events/querying/: index.html
logs-and-events/rules/: index.html
logs-and-events/storing/: index.html
metrics/: index.html  index.xml
metrics/collecting/: index.html  index.xml
metrics/querying/: index.html
metrics/rules/: index.html
metrics/scraping/: index.html
metrics/storing/: index.html
o11y-glossary/: index.html
operating/: index.html  index.xml
operating/meta-observability/: index.html
operating/o11y-troubleshooting/: index.html
operating/production-best-practices/: index.html
operating/securing/: index.html
operating/tuning/: index.html
operating/upgrading/: index.html
preview/heather-alloy-first-class-types/: 404.html  en.search-data.min.91395f59ab2d21106c0e28dd4b0fb20e3eaaf8475a2ed10290084c0845449ada.json  en.search.min.0cbe83590a55673d92ce4c8db700bd650d6d2d237fae035acc2accb77b7c4df7.js  index.html  index.xml  manifest.json  sitemap.xml
preview/heather-alloy-helm/: 404.html  en.search-data.min.545385133720efa0aa39be61a8d483118cb06177ecf3b1c19b571cb4fc60d08f.json  en.search.min.b19d00f8d7d85d9fac2149295df7a491a08e1b4924124863510216349991cc2a.js  index.html  index.xml  manifest.json  sitemap.xml
preview/heather-alloy-helm2/: 404.html  en.search-data.min.9e35dd1d165f09f4806e9f9580b0db8499145d85c66ca43b43bed24f1fa0de17.json  en.search-data.min.b7dc4eb37cd9c8a027f907e7f467f0d8c17a6dfec65d1af73755117c28f0a75b.json  en.search-data.min.e639e4e845e7f1a4c6d1b724b35d53238a4ecf213492a0f576926e6394cb5a89.json  en.search.min.012f2c473e5f9f84d9f3a51dea02a1fad5c8cd04f71ea7ca96a1edb609a89c2b.js  en.search.min.34fe483bb6b23b702b925a12d488edc5f03d0e4c52ef0f82e3e4c3a0eb4c5486.js  en.search.min.b846e559a095589a72870b1a0942b26d21f9c48cdae086f965f03b6d059c1221.js  index.html  index.xml  manifest.json  sitemap.xml
preview/heather-alloy-logs-pipeline-parity/: 404.html  en.search-data.min.aca94190e85ad94555444549ff7d61202af88b3d3464445e2b5400b7f7b14f63.json  en.search-data.min.de873c5a854f542da99c791aeca9be08cde85be732a2999500f40e7be467a0bc.json  index.html  index.xml  manifest.json  (+3 more)
reference/: index.html  index.xml
tags/: index.html  index.xml
(+8426 files in other folders)
