# Cargo.toml (repo root)
[workspace]
resolver = "3"
members = [
    "crates/mz-monitoring-build",
    "crates/mz-monitoring-check",
    "crates/mz-monitoring-pipelines",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
license = "BSL-1.1"
authors = ["Materialize, Inc."]
repository = "https://github.com/MaterializeInc/materialize-monitoring"

# shared dependency versions
[workspace.dependencies]
