# Cargo.toml (repo root)
[workspace]
resolver = "3"
members = [
    "packages/mz-monitoring-build",
    "packages/mz-monitoring-check",
    "packages/mzmon-lib",
]

[workspace.package]
version = "0.5.0"
edition = "2024"
rust-version = "1.95"
license = "BSL-1.1"
authors = ["Materialize, Inc."]
repository = "https://github.com/MaterializeInc/materialize-monitoring"

# shared dependency versions
[workspace.dependencies]
