# Cargo.toml (repo root)
[workspace]
resolver = "3"
members = [
    "packages/mz-monitoring-build",
    "packages/mz-monitoring-check",
    "packages/mzmon-lib",
]

[workspace.package]
version = "0.9.0"
edition = "2024"
rust-version = "1.96"
license = "BSL-1.1"
authors = ["Materialize, Inc."]
repository = "https://github.com/MaterializeInc/materialize-monitoring"
