[project]
name = "materialize-monitoring"
# unversioned (do not upload)
version = "0.8.0"
description = "Infrastructure for Monitoring Materialize"
readme = "README.md"
requires-python = ">=3.12"
license = "BUSL-1.1"

classifiers = [
    "Development Status :: 1 - Planning",
    "Private :: Do Not Upload",
    "Topic :: System :: Monitoring",
]

dependencies = [
    "py-mzmon-lib",
    "grafana-dashboards",
    # WARNING: package managers may see "later" versions that are actually earlier releases
    # due to some epoch issues with grafana-foundation-sdk.
    "grafana-foundation-sdk==0.0.18",
    "pydantic>=2.13.3",
    "pyyaml>=6.0.3",
    "promql-parser>=0.10.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pyright>=1.1.409",
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]

[tool.uv]
package = false
default-groups = "all"

[tool.uv.sources]
grafana-dashboards = { workspace = true }
py-mzmon-lib = { workspace = true }

[tool.uv.workspace]
members = [
    "packages/py-mzmon-lib",  # internal library for shared defs (python)
    "packages/grafana-dashboards",  # grafana dashboards
]

[tool.ruff]
# https://docs.astral.sh/ruff/configuration/
# https://docs.astral.sh/ruff/settings/

# NOTICE(Alphadelta): we use Heather's opinionated rules (SELECT=ALL, ~40 ignores)
# which is far stricter than existing projects (but REASONABLE)

fix = true

# Enumerate all fixed violations.
show-fixes = true


[tool.ruff.lint]

# The default ruleset for ruff is only F,E
# Try to have max quality in projects from the start
select = ["ALL"]

# For tests, use per-file-ignores
ignore = [
    "ANN",  # use pyright instead
    "COM",  # conflicts with formatter
    "EM",  # not best practices for errors
    "EXE",  # scripts should not be run that way
    "ISC",  # conflicts with formatter
    "Q",  # conflicts with formatter
    "RET",  # less readable
    "ERA",  # false positives
    "PERF",  # complex for min gains
    "FIX",  # good to note incomplete code

    # security (bandit)
    "S101", # assert used
    "S104",
    "S404", # subprocess used
    # docstyle
    "D104",
    "D107",

    "DTZ003",  # utctime fine
    "SIM108",  # overly complex
    "SIM117",  # can be hard to read
    "PGH003",  # can be hard to implement
    "PLR2004",  # too much indirection
    "PLC0414",  # contradicts F401
    "PTH123",  # okay if assembling an argument
    # todos
    "TD001",
    "TD002",
    "TD003",
    # TC
    "TC001",  # don't need type checking blocks
    "TC002",
    "TC003",
    "TRY003",  # allow for messages to built
    # doclint (not pydocstyle)
    "DOC201",  # sometimes too simple
    "DOC402",
    "DOC501",
    # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
    "W191",
    "E111",
    "E114",
    "E117",
    "E501",
    "D206",
    "D300",

    # Add any additional ignore rules for mz-monitoring
    "FBT",  # grafana-foundation-sdk
]

dummy-variable-rgx = "(^unused_\\w*|_\\w*$)"

task-tags = ["TODO", "FIXME", "XXX", "HACK"]

[tool.ruff.lint.per-file-ignores]
# These are rules we ignore during tests
# because they are either for production or we specifically encourage them
# only during testing
"test_*.py" = [
    "S",  # disable production security best practices in tests
    "SLF",  # private member access encouraged only in clearbox tests
    "D",  # docs not required
]

"docs/**/*.py" = [
    "INP",
]

[tool.ruff.lint.flake8-annotations]
# https://docs.astral.sh/ruff/settings/#lintflake8-annotations
mypy-init-return = true

suppress-dummy-args = true

suppress-none-returning = true

[tool.ruff.lint.flake8-pytest-style]
parametrize-values-type = "tuple"

raises-extend-require-match-for = ["RuntimeError"]

[tool.ruff.lint.flake8-unused-arguments]
# *args, **kwargs
ignore-variadic-names = true

[tool.ruff.lint.flake8-copyright]
# Only used when `--select CPY --preview` is used
author = "Materialize, Inc."

[tool.ruff.lint.pycodestyle]
ignore-overlong-task-comments = true

[tool.ruff.lint.pydocstyle]
convention = "google"
ignore-decorators = ["typing.overload"]
ignore-var-parameters = true

[tool.ruff.format]
line-ending = "lf"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"

[tool.pyright]
ignore = [
    "packages/ref*/**"
]

[tool.pytest]
addopts = ["--showlocals", "-v", "--doctest-modules"]
testpaths = [
    # default to unit tests (in-package)
    "packages/py-mzmon-lib/py_mzmon_lib",
    "packages/grafana-dashboards/dashboards",
]

[build-system]
requires = ["uv_build>=0.11.11,<0.12"]
build-backend = "uv_build"
